--- a/src/content/post/jap-2025/jap2025_day_13.md
+++ b/src/content/post/jap-2025/jap2025_day_13.md
@@ -4,18 +4,23 @@ publishDate: "1 April 2025"
 description: "Shinkansen direzione Kobe"
 orderInSeries: 1
 featured: false
-tags: ["Japan2025"]
+tags: ["Japan2025", "JapTips"]
 ogImage: ""
 ---
 
 # Oggi giornata per ricaricarsi.
 Colazione e mattinata ancora a Nagoya poi dalla stazione ho preso lo shinkansen per arrivare a Kobe (lo stesso che si ferma a Kyoto e Osaka).
-</br>
-</br>
 
+## Come skippare le file per lo shinkansen
 Apro una piccola parentesi lato treni e shinkansen, potete prenotarli senza problemi dalle macchinette delle stazioni, ma specialmente in questo periodo super turistico dovrete fare molta coda per riuscire a prendere un biglietto.
 Uno dei siti più popolari dove prendere i biglietti per lo shinkansen e comprare altre attività e Klook ma è più caro che dalla macchinetta. 
 La soluzione più comoda che ho trovato è usare il sito [SmartEx](https://smart-ex.jp/en/index.php) che è super comodo; potete prenotare i biglietti allo stesso prezzo e poi riceverete un qrcode da scannalizzare alle apposite macchinette per ricevere il biglietto.
 Ma l'ultima novità che ho utilizzato io é quella di associare una IC Card(Suica, Pasmo, etc) all'app smartEx.
 In questo modo non dovrete fare nessuna coda e vi basterà bippare la carta direttamente al gate dello shinkansen che vi "sputerà" il biglietto con le info sul tragitto e sul posto a sedere.
-</br>
+
+## Alloggiare a Kobe?
+Durante l'Hanami, o comunque in alta stagione penso sia una delle scelte migliori, ho cercato un ostello a Osaka e Kyoto ma i prezzi erano veramente alti, non immagino per le camere di albergo. Invece a Kobe si trovano ostelli a 20€ ([qua](https://www.booking.com/Share-DEaNfC) mi son trovato molto bene) a notte vicino alla stazione e poi potete tranquillamente muovervi in treno.
+Alcune gite in giornata spostandosi da Kobe:
+- Osaka (30min)
+- Kyoto (1h)
+- Himeji (1h)
